CARROT-1266: Rework LanguageComponents loading to be more flexible